# docs/swagger.json
@@ -227,6 +227,90 @@
                 ]
             }
         },
+        "/api/v1/metadata/sign": {
+            "get": {
+                "tags": [
+                    "v1",
+                    "v1"
+                ],
+                "summary": "Get the role metadata signing data. Scope: write:metadata",
+                "description": "Get signing the role metadata signging status and current metadata.",
+                "operationId": "get_sign_api_v1_metadata_sign_get",
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/MetadataSignGetResponse"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not found"
+                    }
+                },
+                "security": [
+                    {
+                        "OAuth2PasswordBearer": [
+                            "write:metadata"
+                        ]
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "v1",
+                    "v1"
+                ],
+                "summary": "Get the role metadata signing data. Scope: write:metadata",
+                "description": "Get signing the role metadata signging status and current metadata.",
+                "operationId": "post_sign_api_v1_metadata_sign_post",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/MetadataSignPostPayload"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "202": {
+                        "description": "Successful Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/MetadataPostResponse"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not found"
+                    },
+                    "422": {
+                        "description": "Validation Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/HTTPValidationError"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "OAuth2PasswordBearer": [
+                            "write:metadata"
+                        ]
+                    }
+                ]
+            }
+        },
         "/api/v1/artifacts/": {
             "post": {
                 "tags": [
@@ -808,7 +892,7 @@
             "BootstrapGetResponse": {
                 "properties": {
                     "data": {
-                        "$ref": "#/components/schemas/GetData"
+                        "$ref": "#/components/schemas/repository_service_tuf_api__bootstrap__GetData"
                     },
                     "message": {
                         "type": "string",
@@ -991,23 +1075,6 @@
                     ]
                 }
             },
-            "GetData": {
-                "properties": {
-                    "bootstrap": {
-                        "type": "boolean",
-                        "title": "Bootstrap"
-                    },
-                    "state": {
-                        "type": "string",
-                        "title": "State"
-                    }
-                },
-                "type": "object",
-                "required": [
-                    "bootstrap"
-                ],
-                "title": "GetData"
-            },
             "GetTokenResponse": {
                 "properties": {
                     "data": {
@@ -1182,8 +1249,139 @@
                     "data": {
                         "task_id": "7a634b556f784ae88785d36425f9a218"
                     },
-                    "message": "Bootstrap accepted."
+                    "message": "Metadata Update accepted."
                 }
+            },
+            "MetadataSignGetResponse": {
+                "properties": {
+                    "data": {
+                        "$ref": "#/components/schemas/repository_service_tuf_api__metadata__GetData"
+                    },
+                    "message": {
+                        "type": "string",
+                        "title": "Message"
+                    }
+                },
+                "type": "object",
+                "required": [
+                    "message"
+                ],
+                "title": "MetadataSignGetResponse",
+                "example": {
+                    "metadata": {
+                        "root": {
+                            "signatures": [
+                                {
+                                    "keyid": "1cebe343e35f0213f6136758e6c3a8f8e1f9eeb7e47a07d5cb336462ed31dcb7",
+                                    "sig": "b3c81b6579442b8672ff460ac36cdb51064109fcfa93f0e72dabbf338f7d0c24e1a91d3696d72d81f60e94b2782ab1bf41e6b8f3e535538216f4379bf30a4302"
+                                },
+                                {
+                                    "keyid": "800dfb5a1982b82b7893e58035e19f414f553fc08cbb1130cfbae302a7b7fee5",
+                                    "sig": "fdfbb1877da404504e8b9c111d87680df5291094dafa01f66bfe6031e470d7c63cc477c1e79210a89e27734758e54fb54adc529918b1211d9dd9971c8bb26c0a"
+                                }
+                            ],
+                            "signed": {
+                                "_type": "root",
+                                "version": 1,
+                                "spec_version": "1.0.30",
+                                "expires": "2024-02-17T10:55:28Z",
+                                "consistent_snapshot": true,
+                                "keys": {
+                                    "f7a6872f297634219a80141caa2ec9ae8802098b07b67963272603e36cc19fd8": {
+                                        "keytype": "ed25519",
+                                        "scheme": "ed25519",
+                                        "keyval": {
+                                            "public": "9fe7ddccb75b977a041424a1fdc142e01be4abab918dc4c611fbfe4a3360a9a8"
+                                        }
+                                    },
+                                    "1cebe343e35f0213f6136758e6c3a8f8e1f9eeb7e47a07d5cb336462ed31dcb7": {
+                                        "keytype": "ed25519",
+                                        "scheme": "ed25519",
+                                        "keyval": {
+                                            "public": "ad1709b3cb419b99c5cd7427d6411522e5a93aec6767453e91af921a73d22a3c"
+                                        }
+                                    },
+                                    "800dfb5a1982b82b7893e58035e19f414f553fc08cbb1130cfbae302a7b7fee5": {
+                                        "keytype": "ed25519",
+                                        "scheme": "ed25519",
+                                        "keyval": {
+                                            "public": "7098f769f6ab8502b50f3b58686b8a042d5d3bb75d8b3a48a2fcbc15a0223501"
+                                        }
+                                    }
+                                },
+                                "roles": {
+                                    "snapshot": {
+                                        "keyids": [
+                                            "f7a6872f297634219a80141caa2ec9ae8802098b07b67963272603e36cc19fd8"
+                                        ],
+                                        "threshold": 1
+                                    },
+                                    "timestamp": {
+                                        "keyids": [
+                                            "f7a6872f297634219a80141caa2ec9ae8802098b07b67963272603e36cc19fd8"
+                                        ],
+                                        "threshold": 1
+                                    },
+                                    "targets": {
+                                        "keyids": [
+                                            "f7a6872f297634219a80141caa2ec9ae8802098b07b67963272603e36cc19fd8"
+                                        ],
+                                        "threshold": 1
+                                    },
+                                    "root": {
+                                        "keyids": [
+                                            "1cebe343e35f0213f6136758e6c3a8f8e1f9eeb7e47a07d5cb336462ed31dcb7",
+                                            "800dfb5a1982b82b7893e58035e19f414f553fc08cbb1130cfbae302a7b7fee5"
+                                        ],
+                                        "threshold": 1
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "MetadataSignPostPayload": {
+                "properties": {
+                    "role": {
+                        "type": "string",
+                        "title": "Role"
+                    },
+                    "signature": {
+                        "$ref": "#/components/schemas/MetadataSignature"
+                    }
+                },
+                "type": "object",
+                "required": [
+                    "role",
+                    "signature"
+                ],
+                "title": "MetadataSignPostPayload",
+                "example": {
+                    "role": "root",
+                    "signature": {
+                        "keyid": "800dfb5a1982b82b7893e58035e19f414f553fc08cbb1130cfbae302a7b7fee5",
+                        "sig": "1e60e79c909affba4f8051c7b86c861048450b4b32f1b9c106c50203a88877650a897b0c188af0ac0a530f1bccdafbdc2f92d0ee851864a6f24ddea031ef6b02"
+                    }
+                }
+            },
+            "MetadataSignature": {
+                "properties": {
+                    "keyid": {
+                        "type": "string",
+                        "title": "Keyid"
+                    },
+                    "sig": {
+                        "type": "string",
+                        "title": "Sig"
+                    }
+                },
+                "type": "object",
+                "required": [
+                    "keyid",
+                    "sig"
+                ],
+                "title": "MetadataSignature"
             },
             "PayloadTargetsHashes": {
                 "properties": {
@@ -1738,6 +1936,23 @@
                 ],
                 "title": "ValidationError"
             },
+            "repository_service_tuf_api__bootstrap__GetData": {
+                "properties": {
+                    "bootstrap": {
+                        "type": "boolean",
+                        "title": "Bootstrap"
+                    },
+                    "state": {
+                        "type": "string",
+                        "title": "State"
+                    }
+                },
+                "type": "object",
+                "required": [
+                    "bootstrap"
+                ],
+                "title": "GetData"
+            },
             "repository_service_tuf_api__bootstrap__PostData": {
                 "properties": {
                     "task_id": {
@@ -1825,6 +2040,22 @@
                     "expiration"
                 ],
                 "title": "Settings"
+            },
+            "repository_service_tuf_api__metadata__GetData": {
+                "properties": {
+                    "metadata": {
+                        "additionalProperties": {
+                            "$ref": "#/components/schemas/TUFMetadata"
+                        },
+                        "type": "object",
+                        "title": "Metadata"
+                    }
+                },
+                "type": "object",
+                "required": [
+                    "metadata"
+                ],
+                "title": "GetData"
             },
             "repository_service_tuf_api__metadata__PostData": {
                 "properties": {
